# OOD-ANNS

./: README.md
2025-11/: 2025-11-7.md  2025-11-Week-2.md
NGFix/: MULTITHREADING_ISSUES.md  README.md  Test.md
NGFix/docs/: ood_tutorial.md
NGFix/scripts/: analyze_deletion_overhead.py  analyze_deletion_percentage_efs.py  analyze_rebuild_impact.py  generate_deletion_percentage_efs_report.py  generate_lazy_vs_real_deletion_report.py  generate_motivation_report.py  validate_trends.py  visualize_hardness_predictor.py  visualize_query_hardness.ipynb  visualize_random_ops_results.ipynb
NGFix/shell/: README_MOTIVATION_TEST.md  README_SCRIPTS.md  README_UNIFIED_SCRIPTS.md  REMOVE_AFTER_TEST_COMPLETE.sh  build_hnsw_bottom.sh  build_hnsw_ngfix_aknn.sh  final_monitor.sh  monitor.sh  monitor_all.sh  monitor_comprehensive_deletion_test.sh  monitor_efs1000.sh  monitor_noise_test.sh  monitor_tests.sh  monitor_tests_unified.sh  nohup.out  search_hnsw_ngfix.sh  test_comprehensive_deletion_comparison.sh  test_eh_grouping.sh  (+19 more)
NGFix/test/: CMakeLists.txt  README_EH_GROUPING.md  build_hnsw_ngfix_with_gt.cc  search_hnsw_ngfix_filtered.cc  search_hnsw_ngfix_single.cc  stat_additional_edges.cc  test_comprehensive_deletion_comparison.cc  test_delete_query_concurrent.cc  test_deletion_overhead_analysis.cc  test_eh_grouping.cc  test_hardness_predictor.cc  test_hardness_predictor_tree.cc  test_hnsw_ngfix_concurrent.cc  test_hnsw_ngfix_deletion_percentage.cc  test_hnsw_ngfix_insertion.cc  test_hnsw_ngfix_insertion_percentage.cc  test_hnsw_ngfix_insertion_with_offset.cc  test_hnsw_ngfix_random_ops.cc  test_insert_query_concurrent.cc  test_lazy_vs_real_deletion.cc  test_lazy_vs_real_deletion_enhanced.cc  test_lazy_vs_real_deletion_with_validation.cc  test_ngfix_deletion_percentage_efs.cc  test_ngfix_latency_breakdown.cc  test_ngfix_motivation.cc  test_ngfix_selective_optimization.cc  test_query_hardness.cc
NGFix/test/tools/: extract_subset_bin.cc
Ours/: CMakeLists.txt  CODE_ANALYSIS.md  CORRELATION_OPTIMIZATION_RECOMMENDATIONS.md  Code_Summary.md  FIXES_SUMMARY.md  LATENCY_OVERHEAD_ANALYSIS.md  LIGHTGBM_IMPLEMENTATION_REPORT.md  README.md  RECALL_VOLATILITY_ANALYSIS.md  USAGE.md
Ours/data/comparison_10M/: comparison_results.csv
Ours/data/fix_node_cost_test/: delete_node_results.csv  fix_node_cost_results.csv  insert_node_results.csv
Ours/data/lazy_delete_test/: README.md  bloom_filter_optimization_summary.md  latency_analysis.md  lazy_delete_results.csv  runtime_update_results_q1000_i20_d2.csv  set_update_overhead.csv  set_update_overhead_with_lock.csv
Ours/data/runtime_update_test/: INSERT_OPTIMIZATION_SUMMARY.md  NGFIX_NEW_NODE_ANALYSIS.md  RECALL_DECLINE_ANALYSIS.md  TEST_10H_STATUS.md  index_baseline_performance.csv  monitor_10h_test.sh  monitor_test.sh  runtime_update_results.csv  runtime_update_results_insert_optimized.csv  runtime_update_results_ngfix.csv  runtime_update_results_no_graphfix_60min.csv  runtime_update_results_q1000_i140.csv  runtime_update_results_q1000_i140_d2.csv  wait_for_completion.sh
Ours/data/runtime_update_test_1216/: runtime_update_results_ngfix.csv  runtime_update_results_q1000_i20.csv
Ours/data/runtime_update_test_1220/: TEST_10H_FINAL_STATUS.md  check_status.sh  monitor_ngfix_test.sh  runtime_update_results_ngfix.csv  runtime_update_results_ngfix1.csv  runtime_update_results_optimized.csv  runtime_update_results_q1000_i20_d2.csv
Ours/data/t2i-10M/: hardness_predictor_tree_100k_results.json  hardness_predictor_tree_10k_results.json  hardness_predictor_tree_10k_v2_results.json  hardness_predictor_tree_results_100k.json  hardness_predictor_tree_results_final.json  hardness_predictor_tree_results_lgbm.json  hardness_predictor_tree_results_lgbm.json.lgbm.model.info.json  hardness_predictor_tree_results_lgbm_10M.json  hardness_predictor_tree_results_lgbm_10M.json.lgbm.model.info.json  hardness_predictor_tree_results_lgbm_10M_optimized.json.lgbm.model.info.json  hardness_predictor_tree_results_lgbm_10M_optimized_1K.json  hardness_predictor_tree_results_lgbm_10M_optimized_full.json  hardness_predictor_tree_results_lgbm_1M.json  hardness_predictor_tree_results_lgbm_1M.json.lgbm.model.info.json  hardness_predictor_tree_results_lgbm_200k.json  hardness_predictor_tree_results_lgbm_200k.json.lgbm.model.info.json  hardness_predictor_tree_results_lgbm_final.json  hardness_predictor_tree_results_optimized.json  hardness_predictor_tree_results_optimized_v2.json  hardness_predictor_tree_test_results.json
Ours/ourslib/graph/: hnsw_ours.h  node.h
Ours/ourslib/metric/: ip.h
Ours/ourslib/utils/: lightgbm_predictor.cc  lightgbm_predictor.h  search_list.h  ssd_storage.cc  ssd_storage.h
Ours/results/: performance_breakdown.csv
Ours/scripts/: compare_runtime_update_results.py  predict_lightgbm_hardness.py  train_10M_complete.sh  train_lightgbm_hardness_predictor.py  visualize_hardness_predictor.py
Ours/shells/: monitor_lazy_delete_test.sh  test_filter_performance.sh  test_fix_node_cost.sh  test_hardness_predictor_tree.sh  test_lazy_delete.sh  test_lhp_10M.sh  test_lhp_10M_nohup.sh  test_lhp_comparison.sh  test_ours.sh  test_performance_analysis.sh  test_runtime_insert.sh  test_runtime_update_end2end.sh  test_runtime_update_end2end_ngfix.sh
Ours/test/: CMakeLists.txt  debug_data.cc  test_filter_performance.cc  test_fix_node_cost.cc  test_hardness_predictor_tree.cc  test_index_baseline_performance.cc  test_lazy_delete.cc  test_lhp_comparison.cc  test_lhp_detailed_comparison.cc  test_ours.cc  test_performance_analysis.cc  test_runtime_insert.cc  test_runtime_update_end2end.cc  test_runtime_update_end2end_ngfix.cc
Ours/test/tools/: result_evaluation.h
(+53 files in other folders)
