add_executable(build_hnsw_ngfix   build_hnsw_ngfix.cc)
add_executable(build_hnsw_ngfix_aknn   build_hnsw_ngfix_aknn.cc)
add_executable(build_hnsw_ngfix_with_gt   build_hnsw_ngfix_with_gt.cc)
add_executable(search_hnsw_ngfix   search_hnsw_ngfix.cc)
add_executable(search_hnsw_ngfix_filtered   search_hnsw_ngfix_filtered.cc)
add_executable(search_hnsw_ngfix_single   search_hnsw_ngfix_single.cc)
add_executable(build_hnsw_bottom   build_hnsw_bottom.cc)
add_executable(test_hnsw_ngfix_insertion   test_hnsw_ngfix_insertion.cc)
add_executable(test_hnsw_ngfix_insertion_percentage   test_hnsw_ngfix_insertion_percentage.cc)
add_executable(test_hnsw_ngfix_deletion   test_hnsw_ngfix_deletion.cc)
add_executable(test_hnsw_ngfix_deletion_percentage   test_hnsw_ngfix_deletion_percentage.cc)
add_executable(test_hnsw_ngfix_concurrent   test_hnsw_ngfix_concurrent.cc)
add_executable(test_hnsw_ngfix_random_ops   test_hnsw_ngfix_random_ops.cc)
add_executable(test_query_hardness   test_query_hardness.cc)
add_executable(test_delete_query_concurrent   test_delete_query_concurrent.cc)
add_executable(test_insert_query_concurrent   test_insert_query_concurrent.cc)
add_executable(test_eh_grouping   test_eh_grouping.cc)
add_executable(test_ngfix_latency_breakdown   test_ngfix_latency_breakdown.cc)
add_executable(build_hnsw_bottom_rabitq   rabitq_opt/build_hnsw_bottom_rabitq.cc)
add_executable(build_hnsw_ngfix_rabitq   rabitq_opt/build_hnsw_ngfix_rabitq.cc)
add_executable(search_hnsw_ngfix_rabitq   rabitq_opt/search_hnsw_ngfix_rabitq.cc)
add_executable(extract_subset_bin   tools/extract_subset_bin.cc)